[package]
name = "wasm_module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
ml-dsa = { version = "0.1.0-rc.8", default-features = false, features = ["alloc"] }
